# llmstat

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/llmstat/: __init__.py  cli.py  db.py  pricing.py  proxy.py  tui.py
src/tokenwatch/: __init__.py  cli.py  db.py  pricing.py  proxy.py  tui.py
tests/: test_db.py  test_pricing.py  test_proxy.py
