[project]
name = "llmstat"
version = "0.1.1"
description = "CLI-first, local LLM cost tracker for indie devs — drop it in front of any OpenAI-compatible API and watch token usage and spend in real time. No cloud, no signup."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "camelyello" }]
keywords = ["llm", "openai", "tokens", "cost", "tui", "observability", "proxy"]
dependencies = [
    "textual>=0.80",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
llmstat = "llmstat.cli:main"

[project.urls]
Homepage = "https://github.com/camelyello-88/llmstat"
Repository = "https://github.com/camelyello-88/llmstat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmstat"]
